--- a/Polygon.ColorPicker/Polygon.ColorPicker/Views/PickerView.xaml
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/Views/PickerView.xaml
@@ -7,5 +7,8 @@
              xmlns:viewModels="clr-namespace:Polygon.ColorPicker.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid d:DataContext="{d:DesignInstance viewModels:PickerViewModel}"/>
+    <Grid d:DataContext="{d:DesignInstance viewModels:PickerViewModel}">
+        <Button Command="{Binding ChooseColorCommand}" Content="{Binding PickerButtonContent}" HorizontalAlignment="Left" Height="27" Margin="21,24,0,0" VerticalAlignment="Top" Width="115"/>
+        <TextBlock HorizontalAlignment="Left" Margin="175,30,0,0" TextWrapping="Wrap" Text="{Binding ColorDisplayContent}" Foreground="{Binding ColorBrush}" VerticalAlignment="Top"/>
+    </Grid>
 </UserControl>
