--- a/Polygon.ColorPicker/Polygon.ColorPicker/Views/PickerView.xaml
+++ b/Polygon.ColorPicker/Polygon.ColorPicker/Views/PickerView.xaml
@@ -10,5 +10,6 @@
     <Grid d:DataContext="{d:DesignInstance viewModels:PickerViewModel}">
         <Button Command="{Binding ChooseColorCommand}" Content="{Binding PickerButtonContent}" HorizontalAlignment="Left" Height="27" Margin="21,24,0,0" VerticalAlignment="Top" Width="115"/>
         <TextBlock HorizontalAlignment="Left" Margin="175,30,0,0" TextWrapping="Wrap" Text="{Binding ColorDisplayContent}" Foreground="{Binding ColorBrush}" VerticalAlignment="Top"/>
+        <Button Command="{Binding ChangeGmTagCommand}" Content="{Binding ChangeGmTagButtonContent}" HorizontalAlignment="Left" Height="27" Margin="21,87,0,0" VerticalAlignment="Top" Width="115"/>
     </Grid>
 </UserControl>
